@@ -3815,3 +3815,9 @@ Mon Jul 10 20:01:53 PDT 2000	Michael Jennings <mej@eterm.org>
 	We no longer care about gravity.  This should help Sawfish users.
 	
 -------------------------------------------------------------------------------
+Wed Jul 12 22:35:34 PDT 2000	Michael Jennings <mej@eterm.org>
+
+	Added a --cache option (and the config file attribute "cache") to
+	facilitate changing the Imlib2 cache size.
+	
+-------------------------------------------------------------------------------
